Safe commit: pushing current project state to GitHub on a separate branch

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brain Stroke Detection</title>
-    <meta name="description" content="Advanced AI-powered platform for stroke risk assessment and prevention. Get personalized recommendations and track your health journey." />
+    <meta name="description" content="Advanced AI-powered platform for stroke risk assessment and Detection. Get personalized recommendations and track your health journey." />
     <meta name="author" content="Paramveer Singh" />
     <meta property="og:title" content="Brain Stroke Detection" />
-    <meta property="og:description" content="AI-powered platform for early stroke risk assessment and prevention" />
+    <meta property="og:description" content="AI-powered platform for early stroke risk assessment and Detection" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="icon" type="image/x-icon" href="/brain-favicon.ico" />
     <link rel="apple-touch-icon" href="/brain-favicon.ico" />
